@@ -3,10 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cz.vsb.fei</groupId>
-    <artifactId>DonkeyKongFX</artifactId>
-    <version>0.0.1-SNAPHOST</version>
+
+    <groupId>cs.vsb.cz.fei.java2.game</groupId>
+    <artifactId>donkeykong-game</artifactId>
+    <version>1.0-SNAPHOST</version>
     <packaging>jar</packaging>
+    <name>donkeykong-game</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -74,6 +76,18 @@
             <version>1.18.42</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>cs.vsb.cz.fei.java2.api</groupId>
+            <artifactId>donkeykong-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>cs.vsb.cz.fei.java2.db</groupId>
+            <artifactId>donkeykong-db</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <repositories>
@@ -129,6 +143,18 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>cs.vsb.cz.fei.java2.game/vsb.cz.fei.donkeykongfx.App</mainClass>
+                    <options>
+                        <option>--add-modules</option>
+                        <option>javafx.controls,javafx.fxml</option>
+                    </options>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
